spacing fix

--- a/assets/sass/_classes.scss
+++ b/assets/sass/_classes.scss
@@ -15,7 +15,7 @@
     content: "";
     display: block;
     /* This must be the same as the height of the footer */
-    height: 265px;
+    height: $footer-height;
   }
 }
 
